--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "vinted-discord-bot",
-  "version": "2.0.0",
+  "version": "Vinted inc",
   "main": "index.js",
-  "author": "Androz2091 <androz2091@gmail.com>",
+  "author": "Lurcaw <lurcaw@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "discord-sync-commands": "^0.3.0",
