--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vinted-discord-bot",
+  "name": " ",
   "version": "Vinted inc",
   "main": "index.js",
   "author": "Lurcaw <lurcaw@gmail.com>",
